# webpage_hit_counter

./: .automation_tasks_rs_file_hashes.json  .env  .gitignore  Cargo.toml  README.md  RELEASES.md  buildah_image_webpage_hit_counter.sh  cache72.txt  index.html  ssh_psql_insert_webpage.sh  temp72.txt  test_the_new_hit_counter_id.html  webpage_hit_counter_backup.tar  webpage_hit_counter_pod_create.sh
automation_tasks_rs/: .file_hashes.json  .old_metadata.json
automation_tasks_rs/src/: build_cli_bin_mod.rs  build_lib_mod.rs  generic_functions_mod.rs  main.rs  main_new.rs  secrets_always_local_mod.rs  tasks_mod.rs
deploy/: buildah_image_webpage_hit_counter.sh  nginx_sites_available.conf  webpage_hit_counter_backup.tar  webpage_hit_counter_pod_create.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/search.desc/webpage_hit_counter/: webpage_hit_counter-desc-0-.js
docs/src/webpage_hit_counter/: actix_mod.rs.html  deadpool_mod.rs.html  lib.rs.html  postgres_mod.rs.html
docs/webpage_hit_counter/: all.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  enum.LibraryError.html  fn.deadpool_postgres_start.html  fn.get_svg_image.html  fn.select_count.html  index.html  sidebar-items.js
docs/webpage_hit_counter/actix_mod/: fn.get_svg_image.html  index.html  sidebar-items.js
docs/webpage_hit_counter/deadpool_mod/: index.html  (+2 more)
examples/: example_1.rs
src/: actix_mod.rs  deadpool_mod.rs  lib.rs  postgres_mod.rs
tests/: integration_test.rs
tmp/: temp71.txt
(+13 files in other folders)
