[package]
name = "webpage_hit_counter"
version = "1.0.41"
description = "Basic Rust project template for CLI and library, more than just `cargo new hello`"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/webpage_hit_counter"
categories = ["rust-patterns"]
keywords = ["Rust cli and library project template"]
publish = false

[dependencies]
log = "0.4"
pretty_env_logger="0.4.0"
thiserror = "1.0.30"
anyhow="1.0.56"
actix-web = "4.1.0"
mime="0.3.16"
tokio-postgres="0.7.6"
dotenv="0.15.0"
deadpool-postgres = "0.10.2"
